--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img\0c84b6ad-031b-4aa7-a505-b4659552d1a9.jpg" class="img-fluid" alt="">
+              <img src="" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img\0c84b6ad-031b-4aa7-a505-b4659552d1a9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="\assets\img\1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -338,7 +338,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img/65b95747-2782-4b31-8101-137f2efe2c22.jpg" class="img-fluid" alt="">
+              <img src="C:\Users\salmanulhamdan\Desktop\webdesign\portfolio\assets\img\5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="img/65b95747-2782-4b31-8101-137f2efe2c22.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
