--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="" class="img-fluid" alt="">
+              <img src="assets/img/1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="\assets\img\1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -288,9 +288,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="img\home1.png" class="img-fluid" alt="">
+              <img src="assets/img/home1.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img\home1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/home1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -298,9 +298,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img\3b15e7f3-8ad0-4865-a0a8-42234e7953c1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img\3b15e7f3-8ad0-4865-a0a8-42234e7953c1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -308,9 +308,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="img\home2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/home3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img\home2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/home3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -318,9 +318,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="img/home3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/home2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img/home3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/home2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -328,9 +328,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="img\49f7a6b2-c56b-4f8a-8ba4-32b65a67718f.jpg" class="img-fluid" alt="">
+              <img src="assets\img\4.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img\49f7a6b2-c56b-4f8a-8ba4-32b65a67718f.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                <a href="assets\img\4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -338,9 +338,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="C:\Users\salmanulhamdan\Desktop\webdesign\portfolio\assets\img\5.jpg" class="img-fluid" alt="">
+              <img src="assets\img\5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="img/65b95747-2782-4b31-8101-137f2efe2c22.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                <a href="assets\img\5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
