--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/home1.webp" class="img-fluid" alt="">
+              <img src="assets/img/home1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/home1.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/2.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -308,9 +308,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/home2.webp" class="img-fluid" alt="">
+              <img src="assets/img/home2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/home2.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/home2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -318,9 +318,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/home3.webp" class="img-fluid" alt="">
+              <img src="assets/img/home3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/home3.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/home3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
